gyerek besétál pestre a gyógyszertárba

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -223,12 +223,12 @@ ip add 20.0.0.2 255.255.255.240
 ip ospf message-digest-key 1 md5 cisco
 ip nat outside
 no sh
-int g0/0
+int Se0/3/1
 ip add 192.168.2.241 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 ip nat inside
 no sh
-int g0/1
+int Se0/2/0
 ip add 192.168.2.245 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 ip nat inside
@@ -263,11 +263,11 @@ conf t
 hostname SITE2x1
 
 #Portok
-int g0/0
+int Se0/3/0
 ip add 192.168.2.249 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 no sh
-int g0/2
+int Se0/3/1
 ip add 192.168.2.242 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 no sh
@@ -315,11 +315,11 @@ conf t
 hostname SITE2x2
 
 #Portok
-int g0/0
+int Se0/3/1
 ip add 192.168.2.250 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 no sh
-int g0/1
+int Se0/3/0
 ip add 192.168.2.246 255.255.255.252
 ip ospf message-digest-key 1 md5 cisco
 no sh
@@ -428,13 +428,12 @@ access-list 1 permit 192.168.3.32 0.0.0.7
 ena
 conf t
 hostname SW2x1
-do wr
 
 #Vlanok
 vlan 50
 name Szerverfelho
 vlan 60
-name Adatbazis
+name Nyomtatok
 vlan 70
 name Szerverek
 exit
@@ -453,10 +452,16 @@ int fa0/15
 switchport mode access
 switchport access vlan 60
 exit
-int range fa0/16-17
+int fa0/16
 switchport mode access
 switchport access vlan 70
+exit
 
+#STP
+spanning-tree mode rapid-pvst
+spanning-tree vlan 50,60,70 root primary
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 #SW3
 ena
@@ -477,7 +482,11 @@ switchport mode access
 switchport access vlan 70
 exit
 
-
+#STP
+spanning-tree mode rapid-pvst
+spanning-tree vlan 70 root primary
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 #SW1x1
 ena
@@ -493,12 +502,12 @@ vtp version 2
 #Portok
 Int g0/1
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 Int g0/2
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 int fa0/1
 switchport mode access
 switchport access vlan 6
@@ -526,20 +535,23 @@ name Nyomtatok
 
 #Etherchannel
 int range fa0/22-24
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
 channel-group 2 mode active
+int po2
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 
 int range fa0/19-21
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
 channel-group 1 mode active
+int po1
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
+exit
 
 #STP
 spanning-tree mode rapid-pvst
-spanning-tree vlan 10,20,30,40,3,4,5,6,99 root primary
+spanning-tree vlan 10,20,30,40,3,4,5,6 root primary
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
 
@@ -565,13 +577,13 @@ vtp password cisco
 #Portok
 int g0/1
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 exit
 int g0/2
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 exit
 int fa0/1
 switchport mode access
@@ -586,18 +598,25 @@ exit
 
 #Etherchannel
 int range fa0/22-24
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
 channel-group 3 mode active
+int po3
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 
 int range fa0/19-21
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,2,3,4,5,6,99
-switchport trunk native vlan 99
 channel-group 1 mode active
+int po1
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,2,3,4,5,6
+switchport trunk native vlan 40
+exit
 
-
+#STP
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40,3,4,5,6
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
 
 #SW1x3
 ena
@@ -612,8 +631,8 @@ vtp password cisco
 #Portok
 int g0/1
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
 int fa0/2
 switchport mode access
 int fa0/3
@@ -623,12 +642,22 @@ exit
 
 #Etherchannel
 int range fa0/22-24
-switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
 channel-group 3 mode active
-int range fa0/19-21
+int po3
 switchport mode trunk
-switchport trunk allowed vlan 10,20,30,40,3,4,5,6,99
-switchport trunk native vlan 99
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
+
+int range fa0/19-21
 channel-group 2 mode active
+int po2
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+switchport trunk native vlan 40
+exit
+
+#STP
+spanning-tree mode rapid-pvst
+spanning-tree vlan 10,20,30,40,3,4,5,6
+spanning-tree portfast default
+spanning-tree portfast bpduguard default
