--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -281,11 +281,6 @@ encapsulation dot1q 50
 ip add 192.168.2.2 255.255.255.240
 standby version 2
 standby 50 ip 192.168.2.1
-int g0/1.60
-encapsulation dot1q 60
-ip add 192.168.2.18 255.255.255.248
-standby version 2
-standby 60 ip 192.168.2.17
 int g0/1.70
 encapsulation dot1q 70
 ip add 192.168.2.26 255.255.255.248
@@ -302,7 +297,6 @@ network 192.168.2.24 0.0.0.7 area 0
 network 192.168.2.240 0.0.0.3 area 0
 network 192.168.2.248 0.0.0.3 area 0
 passive-interface gig0/1.50
-passive-interface gig0/1.60
 passive-interface gig0/1.70
 auto-cost reference-bandwidth 1000
 area 0 authentication message-digest
@@ -337,13 +331,6 @@ standby version 2
 standby 50 ip 192.168.2.1
 standby 50 priority 110
 standby 50 preempt
-int g0/2.60
-encapsulation dot1q 60
-ip add 192.168.2.19 255.255.255.248
-standby version 2
-standby 60 ip 192.168.2.17
-standby 60 priority 110
-standby 60 preempt
 int g0/2.70
 encapsulation dot1q 70
 ip add 192.168.2.27 255.255.255.248
@@ -363,7 +350,6 @@ network 192.168.2.24 0.0.0.7 area 0
 network 192.168.2.244 0.0.0.3 area 0
 network 192.168.2.248 0.0.0.3 area 0
 passive-interface gig0/2.50
-passive-interface gig0/2.60
 passive-interface gig0/2.70
 auto-cost reference-bandwidth 1000
 area 0 authentication message-digest
@@ -432,36 +418,33 @@ hostname SW2x1
 #Vlanok
 vlan 50
 name Szerverfelho
-vlan 60
-name Nyomtatok
 vlan 70
-name Szerverek
+name Szerver
 exit
 
 #Portok
 int range g0/1-2
 switchport mode trunk
-switchport trunk allowed vlan 50,60,70,99
+switchport trunk allowed vlan 50,70,99
 switchport trunk native vlan 99
 exit
 int range fa0/1-14
 switchport mode access
 switchport access vlan 50
 exit
-int fa0/15
-switchport mode access
-switchport access vlan 60
-exit
-int fa0/16
+int range fa0/15-16
 switchport mode access
 switchport access vlan 70
 exit
 
 #STP
-spanning-tree mode rapid-pvst
-spanning-tree vlan 50,60,70 root primary
 spanning-tree portfast default
 spanning-tree portfast bpduguard default
+
+
+
+
+
 
 #SW3
 ena
