--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -97,7 +97,7 @@ ip add 200.200.200.10 255.255.255.252
 ip ospf message-digest-key 1 md5 isp
 no sh
 int Se0/3/0
-ip add 40.0.0.0 255.255.255.240
+ip add 40.0.0.1 255.255.255.240
 ip ospf message-digest-key 1 md5 isp
 no sh
 exit
@@ -126,34 +126,41 @@ int Se0/3/0
 ip add 40.0.0.2 255.255.255.240
 ip nat outside
 no sh
-exit
 int g0/0
 ip nat inside
 no sh
 int g0/0.10
 encapsulation dot1q 10
 ip add 192.168.1.1 255.255.255.224
+ip nat inside
 int g0/0.20
 encapsulation dot1q 20
 ip add 192.168.1.33 255.255.255.240
+ip nat inside
 int g0/0.30
 encapsulation dot1q 30
 ip add 192.168.1.65 255.255.255.248
+ip nat inside
 int g0/0.40
 encapsulation dot1q 40
 ip add 192.168.1.49 255.255.255.240
+ip nat inside
 int g0/0.3
 encapsulation dot1q 3
-ip add 192.168.1.74 255.255.255.248
+ip add 192.168.1.73 255.255.255.248
+ip nat inside
 int g0/0.4
 encapsulation dot1q 4
 ip add 192.168.1.81 255.255.255.248
+ip nat inside
 int g0/0.5
 encapsulation dot1q 5
-ip add 192.168.1.81 255.255.255.248
+ip add 192.168.1.82 255.255.255.248
+ip nat inside
 int g0/0.6
 encapsulation dot1q 6
 ip add 192.168.1.89 255.255.255.248
+ip nat inside
 exit
 
 
@@ -191,11 +198,6 @@ exit
 ip dhcp pool Rendszergazda
 net 192.168.1.48 255.255.255.240
 default-router 192.168.1.49
-dns-server 8.8.8.8
-exit
-ip dhcp pool Szerverszoba
-net 192.168.1.72 255.255.255.248
-default-router 192.168.1.73
 dns-server 8.8.8.8
 exit
 #RECEPCIÓ MÉG NINCSEN
