--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -186,7 +186,7 @@ net 192.168.1.32 255.255.255.240
 default-router 192.168.1.33
 dns-server 8.8.8.8
 exit
-ip dhcp pool hangtechnika
+ip dhcp pool Hangtechnika
 net 192.168.1.64 255.255.255.248
 default-router 192.168.1.65
 dns-server 8.8.8.8
