--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -161,7 +161,26 @@ exit
 
 
 #FORGALOMIRÁNYÍTÁS
+router ospf 1
+network 192.168.1.0 0.0.0.31 area 0
+network 192.168.1.32 0.0.0.15 area 0
+network 192.168.1.48 0.0.0.15 area 0
+network 192.168.1.64 0.0.0.7 area 0
+network 192.168.1.72 0.0.0.7 area 0
+network 192.168.1.80 0.0.0.7 area 0
+passive-interface g0/0
+passive-interface g0/0.3
+passive-interface g0/0.5
+passive-interface g0/0.6
+passive-interface g0/0.10
+passive-interface g0/0.20
+passive-interface g0/0.30
+passive-interface g0/0.40
+default-information originate
+auto-cost reference-bandwidth 1000
+exit
 ip route 0.0.0.0 0.0.0.0 40.0.0.1
+
 
 #NAT
 ip nat pool SITE1NAT 40.0.0.3 40.0.0.14 netmask 255.255.255.240
@@ -201,6 +220,19 @@ exit
 #WLC
 admin
 jelszo: Aa123456!
+
+
+################Tunnel
+int Tunnel 1
+tunnel source Se0/3/0
+tunnel destination 20.0.0.2
+ip add 35.0.0.2 255.255.255.224
+exit
+router ospf 1
+network 35.0.0.0 0.0.0.31 area 0
+exit
+
+
 
 
 
@@ -244,8 +276,15 @@ access-list 2 permit 192.168.2.0 0.0.0.15
 access-list 2 permit 192.168.2.16 0.0.0.7
 access-list 2 permit 192.168.2.24 0.0.0.7
 
-
-
+###################TUNNEL
+int Tunnel 1
+tunnel source Se0/3/0
+tunnel destination 40.0.0.1
+ip add 35.0.0.1 255.255.255.224
+exit
+router ospf 1
+network 35.0.0.0 0.0.0.31 area 0
+exit
 
 
 
