--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -162,6 +162,7 @@ exit
 
 #FORGALOMIRÁNYÍTÁS
 router ospf 1
+router-id 1.0.0.0
 network 192.168.1.0 0.0.0.31 area 0
 network 192.168.1.32 0.0.0.15 area 0
 network 192.168.1.48 0.0.0.15 area 0
@@ -227,13 +228,22 @@ int Tunnel 1
 tunnel source Se0/3/0
 tunnel destination 20.0.0.2
 ip add 35.0.0.2 255.255.255.224
+ip ospf message-digest-key 1 md5 cisco
 exit
 router ospf 1
 network 35.0.0.0 0.0.0.31 area 0
 exit
-
-
-
+crypto isakmp policy 10
+encr aes 256
+authentication pre-share
+crypto isakmp key PASS address 40.0.0.2
+crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+crypto map MYMAP 10 ipsec-isakmp
+set peer 40.0.0.2
+set transform-set TRANS
+match address 100
+exit
+access-list 100 permit gre any any
 
 
 #SITE2x0
@@ -244,16 +254,19 @@ hostname SITE2x0
 #Portok
 int Se0/3/0
 ip add 20.0.0.2 255.255.255.240
+ip ospf authentication message-digest
 ip ospf message-digest-key 1 md5 cisco
 ip nat outside
 no sh
 int Se0/3/1
 ip add 192.168.2.241 255.255.255.252
+ip ospf authentication message-digest
 ip ospf message-digest-key 1 md5 cisco
 ip nat inside
 no sh
 int Se0/2/0
 ip add 192.168.2.245 255.255.255.252
+ip ospf authentication message-digest
 ip ospf message-digest-key 1 md5 cisco
 ip nat inside
 no sh
@@ -261,11 +274,11 @@ no sh
 
 #FORGALOMIRÁNYÍTÁS
 router ospf 1
+router-id 2.0.0.0
 network 192.168.2.240 0.0.0.3 area 0
 network 192.168.2.244 0.0.0.3 area 0
 default-information originate
 auto-cost reference-bandwidth 1000
-area 0 authentication message-digest
 exit
 ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
@@ -279,12 +292,28 @@ access-list 2 permit 192.168.2.24 0.0.0.7
 ###################TUNNEL
 int Tunnel 1
 tunnel source Se0/3/0
-tunnel destination 40.0.0.1
+tunnel destination 40.0.0.2
 ip add 35.0.0.1 255.255.255.224
+ip ospf message-digest-key 1 md5 cisco
 exit
 router ospf 1
 network 35.0.0.0 0.0.0.31 area 0
 exit
+crypto isakmp policy 10
+encr aes 256
+authentication pre-share
+exit
+crypto isakmp key PASS address 20.0.0.2
+crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+crypto map MYMAP 10 ipsec-isakmp
+set peer 20.0.0.2
+set transform-set TRANS
+match address 100
+exit
+access-list 100 permit gre any any
+
+
+
 
 
 
