OSPF GRE tunnel

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -277,7 +277,6 @@ router ospf 1
 router-id 2.0.0.0
 network 192.168.2.240 0.0.0.3 area 0
 network 192.168.2.244 0.0.0.3 area 0
-default-information originate
 auto-cost reference-bandwidth 1000
 exit
 ip route 0.0.0.0 0.0.0.0 20.0.0.1
@@ -361,6 +360,7 @@ passive-interface gig0/1.70
 auto-cost reference-bandwidth 1000
 area 0 authentication message-digest
 exit
+ip route 0.0.0.0 0.0.0.0 192.168.2.241
 
 
 #SITE2x2
@@ -414,7 +414,7 @@ passive-interface gig0/2.70
 auto-cost reference-bandwidth 1000
 area 0 authentication message-digest
 exit
-
+ip route 0.0.0.0 0.0.0.0 192.168.2.245
 
 
 
