site1-2 tunnel kész

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -120,10 +120,12 @@ exit
 ena
 conf t
 hostname SITE1x0
+license boot module c2900 technology-package securityk9
 
 #Portok
 int Se0/3/0
 ip add 40.0.0.2 255.255.255.240
+crypto map MYMAP
 ip nat outside
 no sh
 int g0/0
@@ -177,7 +179,6 @@ passive-interface g0/0.10
 passive-interface g0/0.20
 passive-interface g0/0.30
 passive-interface g0/0.40
-default-information originate
 auto-cost reference-bandwidth 1000
 exit
 ip route 0.0.0.0 0.0.0.0 40.0.0.1
@@ -228,7 +229,6 @@ int Tunnel 1
 tunnel source Se0/3/0
 tunnel destination 20.0.0.2
 ip add 35.0.0.2 255.255.255.224
-ip ospf message-digest-key 1 md5 cisco
 exit
 router ospf 1
 network 35.0.0.0 0.0.0.31 area 0
@@ -236,26 +236,30 @@ exit
 crypto isakmp policy 10
 encr aes 256
 authentication pre-share
-crypto isakmp key PASS address 40.0.0.2
+crypto isakmp key PASS address 20.0.0.2
 crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
 crypto map MYMAP 10 ipsec-isakmp
-set peer 40.0.0.2
+set peer 20.0.0.2
 set transform-set TRANS
 match address 100
 exit
 access-list 100 permit gre any any
 
 
+
+
 #SITE2x0
 ena
 conf t
 hostname SITE2x0
+license boot module c2900 technology-package securityk9
 
 #Portok
 int Se0/3/0
 ip add 20.0.0.2 255.255.255.240
 ip ospf authentication message-digest
 ip ospf message-digest-key 1 md5 cisco
+crypto map MYMAP
 ip nat outside
 no sh
 int Se0/3/1
@@ -293,7 +297,6 @@ int Tunnel 1
 tunnel source Se0/3/0
 tunnel destination 40.0.0.2
 ip add 35.0.0.1 255.255.255.224
-ip ospf message-digest-key 1 md5 cisco
 exit
 router ospf 1
 network 35.0.0.0 0.0.0.31 area 0
@@ -302,10 +305,10 @@ crypto isakmp policy 10
 encr aes 256
 authentication pre-share
 exit
-crypto isakmp key PASS address 20.0.0.2
+crypto isakmp key PASS address 40.0.0.2
 crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
 crypto map MYMAP 10 ipsec-isakmp
-set peer 20.0.0.2
+set peer 40.0.0.2
 set transform-set TRANS
 match address 100
 exit
@@ -320,6 +323,7 @@ access-list 100 permit gre any any
 ena
 conf t
 hostname SITE2x1
+license boot module c2900 technology-package securityk9
 
 #Portok
 int Se0/3/0
@@ -367,6 +371,7 @@ ip route 0.0.0.0 0.0.0.0 192.168.2.241
 ena
 conf t
 hostname SITE2x2
+license boot module c2900 technology-package securityk9
 
 #Portok
 int Se0/3/1
@@ -423,6 +428,7 @@ ip route 0.0.0.0 0.0.0.0 192.168.2.245
 ena
 conf t
 hostname SITE3
+license boot module c2900 technology-package securityk9
 
 #Portok
 int Se0/3/0
