nem működik site2-3 közötti tunnel

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -292,7 +292,7 @@ access-list 2 permit 192.168.2.0 0.0.0.15
 access-list 2 permit 192.168.2.16 0.0.0.7
 access-list 2 permit 192.168.2.24 0.0.0.7
 
-###################TUNNEL
+#TUNNEL 1
 int Tunnel 1
 tunnel source Se0/3/0
 tunnel destination 40.0.0.2
@@ -314,7 +314,27 @@ match address 100
 exit
 access-list 100 permit gre any any
 
-
+#TUNNEL 2
+int Tunnel 2
+tunnel source Se0/3/0
+tunnel destination 30.0.0.2
+ip add 50.0.0.1 255.255.255.224
+exit
+router ospf 1
+network 50.0.0.0 0.0.0.31 area 0
+exit
+crypto isakmp policy 10
+encr aes 256
+authentication pre-share
+exit
+crypto isakmp key PASS address 30.0.0.2
+crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+crypto map MYMAP 20 ipsec-isakmp
+set peer 30.0.0.2
+set transform-set TRANS
+match address 100
+exit
+access-list 100 permit gre any any
 
 
 
@@ -454,8 +474,18 @@ net 192.168.3.0 255.255.255.224
 default-router 192.168.3.1
 dns-server 8.8.8.8
 exit
+ip dhcp pool Vezetoseg_HR
+net 192.168.3.32 255.255.255.248
+default-router 192.168.3.33
+dns-server 8.8.8.8
+exit
 
 #FORGALOMIRÁNYÍTÁS
+router ospf 1
+router-id 3.0.0.0
+passive-interface g0/1
+passive-interface g0/1.70
+passive-interface g0/0
 ip route 0.0.0.0 0.0.0.0 30.0.0.1
 
 #NAT
@@ -464,6 +494,30 @@ ip nat inside source list 1 pool SITE3NAT overload
 access-list 1 permit 192.168.3.0 0.0.0.31
 access-list 1 permit 192.168.3.32 0.0.0.7
 
+#TUNNEL 2
+int Tunnel 2
+tunnel source Se0/3/0
+tunnel destination 20.0.0.2
+ip add 50.0.0.2 255.255.255.224
+exit
+router ospf 1
+network 50.0.0.0 0.0.0.31 area 0
+exit
+crypto isakmp policy 10
+encr aes 256
+authentication pre-share
+exit
+crypto isakmp key PASS address 20.0.0.2
+crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+crypto map MYMAP 20 ipsec-isakmp
+set peer 20.0.0.2
+set transform-set TRANS
+match address 100
+exit
+int Se0/3/0
+Crypto map MYMAP
+exit
+access-list 100 permit gre any any
 
 
 
