--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -144,7 +144,7 @@ encapsulation dot1q 30
 ip add 192.168.1.65 255.255.255.248
 ip nat inside
 int g0/0.40
-encapsulation dot1q 40
+encapsulation dot1q 40 native
 ip add 192.168.1.49 255.255.255.240
 ip nat inside
 int g0/0.3
@@ -725,11 +725,18 @@ int g0/1
 switchport mode trunk
 switchport trunk allowed vlan 10,20,30,40,3,5,6
 switchport trunk native vlan 40
+int g0/2
+switchport mode trunk
+switchport trunk allowed vlan 10,20,30,40,3,5,6
+switchport trunk native vlan 40
 int fa0/2
 switchport mode access
 int fa0/3
 switchport mode access
 switchport access vlan 3
+int fa0/1
+switchport mode access
+switchport access vlan 40
 exit
 
 #Etherchannel
