--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -227,6 +227,27 @@
             match address 100
             exit
         access-list 100 permit gre host 40.0.0.2 host 20.0.0.2
+        #TUNNEL 3
+        int Tunnel 3
+            tunnel source Se0/3/0
+            tunnel destination 30.0.0.2
+            ip add 60.0.0.1 255.255.255.224
+            exit
+        router ospf 1
+            network 60.0.0.0 0.0.0.31 area 0
+            exit
+        crypto isakmp policy 10
+            encr aes 256
+            authentication pre-share
+            exit
+        crypto isakmp key PASS address 30.0.0.2
+        crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+        crypto map MYMAP 30 ipsec-isakmp
+            set peer 30.0.0.2
+            set transform-set TRANS
+            match address 130
+            exit
+        access-list 130 permit gre host 40.0.0.2 host 30.0.0.2
 
 
     #SITE2x0
@@ -494,7 +515,30 @@
                 Crypto map MYMAP
                 exit
             access-list 100 permit gre host 30.0.0.2 host 20.0.0.2
-
+        #TUNNEL 3
+        int Tunnel 3
+            tunnel source Se0/3/0
+            tunnel destination 40.0.0.2
+            ip add 60.0.0.2 255.255.255.224
+            exit
+        router ospf 1
+            network 60.0.0.0 0.0.0.31 area 0
+            exit
+        crypto isakmp policy 10
+            encr aes 256
+            authentication pre-share
+            exit
+        crypto isakmp key PASS address 40.0.0.2
+        crypto ipsec transform-set TRANS esp-aes 256 esp-sha-hmac
+        crypto map MYMAP 30 ipsec-isakmp
+            set peer 40.0.0.2
+            set transform-set TRANS
+            match address 130
+            exit
+        int Se0/3/0
+            Crypto map MYMAP
+            exit
+        access-list 130 permit gre host 30.0.0.2 host 40.0.0.2
 
 
 #----------Switchek-------------
