static route fix site 2

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -384,6 +384,8 @@
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.241
+            ip route 0.0.0.0 0.0.0.0 192.168.2.250
+
 
 
     #SITE2x2
@@ -437,6 +439,8 @@
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.245
+            ip route 0.0.0.0 0.0.0.0 192.168.2.249
+
 
 
     #SITE3
