--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -384,7 +384,7 @@
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.241
-            ip route 0.0.0.0 0.0.0.0 192.168.2.250
+            ip route 0.0.0.0 0.0.0.0 192.168.2.250 2
 
 
 
@@ -439,7 +439,7 @@
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.245
-            ip route 0.0.0.0 0.0.0.0 192.168.2.249
+            ip route 0.0.0.0 0.0.0.0 192.168.2.249 2
 
 
 
