--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -353,6 +353,10 @@
                 ip add 192.168.2.242 255.255.255.252
                 ip ospf message-digest-key 1 md5 cisco
                 no sh
+            int g0/0
+                ip add 192.168.2.33 255.255.255.240
+                no sh
+            exit
 
         #HSRP
             int g0/1
@@ -363,11 +367,11 @@
                 ip add 192.168.2.2 255.255.255.240
                 standby version 2
                 standby 50 ip 192.168.2.1
-            int g0/1.70
-                encapsulation dot1q 70
+            int g0/1.60
+                encapsulation dot1q 60
                 ip add 192.168.2.26 255.255.255.248
                 standby version 2
-                standby 70 ip 192.168.2.25
+                standby 60 ip 192.168.2.25
                 no sh
                 exit
 
@@ -376,16 +380,25 @@
                 network 192.168.2.0 0.0.0.15 area 0
                 network 192.168.2.16 0.0.0.7 area 0
                 network 192.168.2.24 0.0.0.7 area 0
+                network 192.168.2.32 0.0.0.15 area 0
                 network 192.168.2.240 0.0.0.3 area 0
                 network 192.168.2.248 0.0.0.3 area 0
+                passive-interface gig0/0
+                passive-interface gig0/1
                 passive-interface gig0/1.50
-                passive-interface gig0/1.70
+                passive-interface gig0/1.60
                 auto-cost reference-bandwidth 1000
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.241
             ip route 0.0.0.0 0.0.0.0 192.168.2.250 2
 
+        #DHCP
+            ip dhcp pool Teszteles
+                net 192.168.2.32 255.255.255.240
+                default-router 192.168.2.33
+                dns-server 8.8.8.8
+                exit
 
 
     #SITE2x2
@@ -404,6 +417,10 @@
                 ip ospf message-digest-key 1 md5 cisco
                 no sh
                 exit
+            int g0/0
+                ip add 192.168.2.17 255.255.255.248
+                no sh
+            exit
 
         #HSRP
             int g0/2
@@ -416,13 +433,13 @@
                 standby 50 ip 192.168.2.1
                 standby 50 priority 110
                 standby 50 preempt
-            int g0/2.70
-                encapsulation dot1q 70
+            int g0/2.60
+                encapsulation dot1q 60
                 ip add 192.168.2.27 255.255.255.248
                 standby version 2
-                standby 70 ip 192.168.2.25
-                standby 70 priority 110
-                standby 70 preempt
+                standby 60 ip 192.168.2.25
+                standby 60 priority 110
+                standby 60 preempt
                 no sh
                 exit
 
@@ -433,15 +450,22 @@
                 network 192.168.2.24 0.0.0.7 area 0
                 network 192.168.2.244 0.0.0.3 area 0
                 network 192.168.2.248 0.0.0.3 area 0
+                passive-interface gig0/0
+                passive-interface gig0/2
                 passive-interface gig0/2.50
-                passive-interface gig0/2.70
+                passive-interface gig0/2.60
                 auto-cost reference-bandwidth 1000
                 area 0 authentication message-digest
                 exit
             ip route 0.0.0.0 0.0.0.0 192.168.2.245
             ip route 0.0.0.0 0.0.0.0 192.168.2.249 2
 
-
+        #DHCP
+            ip dhcp pool Adatbazis
+                net 192.168.2.16 255.255.255.248
+                default-router 192.168.2.17
+                dns-server 8.8.8.8
+                exit
 
     #SITE3
         ena
@@ -554,14 +578,14 @@
         #Vlanok
             vlan 50
                 name Szerverfelho
-            vlan 70
+            vlan 60
                 name Szerver
                 exit
 
         #Portok
         int range g0/1-2
             switchport mode trunk
-            switchport trunk allowed vlan 50,70,99
+            switchport trunk allowed vlan 50,60,99
             switchport trunk native vlan 99
             exit
         int range fa0/1-14
@@ -570,7 +594,7 @@
             exit
         int range fa0/15-16
             switchport mode access
-            switchport access vlan 70
+            switchport access vlan 60
             exit
 
         #STP
