Vezetoseg Site 3 név fix

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -609,7 +609,7 @@
 
         #Portok
             vlan 70
-                name Teszteles
+                name Vezetoseg_HR
                 exit
             int g0/1
                 switchport mode trunk
