--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -570,61 +570,6 @@
 
 
 #----------Switchek-------------
-    #SW2
-        ena
-            conf t
-            hostname SW2
-
-        #Vlanok
-            vlan 50
-                name Szerverfelho
-            vlan 60
-                name Szerver
-                exit
-
-        #Portok
-        int range g0/1-2
-            switchport mode trunk
-            switchport trunk allowed vlan 50,60,99
-            switchport trunk native vlan 99
-            exit
-        int range fa0/1-14
-            switchport mode access
-            switchport access vlan 50
-            exit
-        int range fa0/15-16
-            switchport mode access
-            switchport access vlan 60
-            exit
-
-        #STP
-            spanning-tree portfast default
-            spanning-tree portfast bpduguard default
-
-
-    #SW3
-        ena
-            conf t
-            hostname SW3
-
-        #Portok
-            vlan 70
-                name Vezetoseg_HR
-                exit
-            int g0/1
-                switchport mode trunk
-                switchport trunk allowed vlan 70,99
-                switchport trunk native vlan 99
-                exit
-            int range fa0/1-6
-                switchport mode access
-                switchport access vlan 70
-                exit
-
-        #STP
-            spanning-tree portfast default
-            spanning-tree portfast bpduguard default
-
 
     #SW1x1
         ena
@@ -696,6 +641,42 @@
             int po2
                 spanning-tree guard root
 
+        #DHCP-snooping
+            ip dhcp snooping
+            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping information option allow-untrusted
+            interface GigabitEthernet0/1
+                ip dhcp snooping trust
+                exit
+            interface GigabitEthernet0/2
+                ip dhcp snooping limit rate 12
+                exit
+            interface FastEthernet0/1
+                ip dhcp snooping limit rate 3
+                exit
+
+        #ARP inspection
+            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection validate src-mac dst-mac ip
+            interface GigabitEthernet0/1
+                ip arp inspection trust
+                exit
+
+        #Portsecurity
+            int g0/2
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            int fa0/1
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+
+
 
     #SW1x2
         ena
@@ -748,6 +729,46 @@
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
 
+        
+        #DHCP-snooping
+            ip dhcp snooping
+            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping information option allow-untrusted
+            interface GigabitEthernet0/1
+                ip dhcp snooping limit rate 50
+                exit
+            interface GigabitEthernet0/2
+                ip dhcp snooping limit rate 24
+                exit
+            interface FastEthernet0/1
+                ip dhcp snooping limit rate 3
+                exit
+
+        #ARP inspection
+            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection validate src-mac dst-mac ip
+
+        #Portsecurity
+            int g0/1
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            int g0/2
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            int range fa0/1-2
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+
+
 
     #SW1x3
         ena
@@ -799,7 +820,149 @@
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
 
+        #DHCP-snooping
+            ip dhcp snooping
+            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping information option allow-untrusted
+            int g0/1
+                ip dhcp snooping limit rate 20
+                exit
+            int g0/2
+                ip dhcp snooping limit rate 24
+                exit
+            int range fa0/1-3
+                ip dhcp snooping limit rate 3
+                exit
+
+        #ARP inspection
+            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection validate src-mac dst-mac ip
+
+        #Portsecurity
+            int g0/1
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            int g0/2
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            int range fa0/1-3
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+
+
+    #SW2
+        ena
+            conf t
+            hostname SW2
+
+        #Vlanok
+            vlan 50
+                name Szerverfelho
+            vlan 60
+                name Szerver
+                exit
+
+        #Portok
+        int range g0/1-2
+            switchport mode trunk
+            switchport trunk allowed vlan 50,60,99
+            switchport trunk native vlan 99
+            exit
+        int range fa0/1-14
+            switchport mode access
+            switchport access vlan 50
+            exit
+        int range fa0/15-16
+            switchport mode access
+            switchport access vlan 60
+            exit
+
+        #STP
+            spanning-tree portfast default
+            spanning-tree portfast bpduguard default
+
+
+        #DHCP-snooping
+            ip dhcp snooping
+            ip dhcp snooping vlan 50,60
+            ip dhcp snooping information option allow-untrusted
+            int range fa0/1-14
+                ip dhcp snooping limit rate 28
+                exit
+            int range fa0/15-16
+                ip dhcp snooping limit rate 4
+                exit
+
+        #ARP inspection
+            ip arp inspection vlan 50,60
+            ip arp inspection validate src-mac dst-mac ip
+
+        #Portsecurity
+            int range fa0/1-16
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
     
+
+    #SW3
+        ena
+            conf t
+            hostname SW3
+
+        #Portok
+            vlan 70
+                name Vezetoseg_HR
+                exit
+            int g0/1
+                switchport mode trunk
+                switchport trunk allowed vlan 70,99
+                switchport trunk native vlan 99
+                exit
+            int range fa0/1-6
+                switchport mode access
+                switchport access vlan 70
+                exit
+
+        #STP
+            spanning-tree portfast default
+            spanning-tree portfast bpduguard default
+
+
+        #DHCP-snooping
+            ip dhcp snooping
+            ip dhcp snooping vlan 70
+            ip dhcp snooping information option allow-untrusted
+            int range fa0/1-7
+                ip dhcp snooping limit rate 13
+                exit
+
+        #ARP inspection
+            ip arp inspection vlan 70
+            ip arp inspection validate src-mac dst-mac ip
+
+        #Portsecurity
+            int range fa0/1-7
+                switchport port-security
+                switchport port-security maximum 1
+                switchport port-security violation restrict
+                switchport port-security mac-address sticky
+                exit
+            
+
+
+
+
 #WLC
     admin
     jelszo: Aa123456!
