--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -111,6 +111,8 @@
             conf t
             hostname SITE1x0
             license boot module c2900 technology-package securityk9
+            enable password cisco
+            service password-encryption
 
         #Portok
             int Se0/3/0
@@ -255,6 +257,8 @@
             conf t
             hostname SITE2x0
             license boot module c2900 technology-package securityk9
+            enable password cisco
+            service password-encryption
 
         #Portok
             int Se0/3/0
@@ -343,6 +347,8 @@
             conf t
             hostname SITE2x1
             license boot module c2900 technology-package securityk9
+            enable password cisco
+            service password-encryption
 
         #Portok
             int Se0/3/0
@@ -406,6 +412,8 @@
             conf t
             hostname SITE2x2
             license boot module c2900 technology-package securityk9
+            enable password cisco
+            service password-encryption
 
         #Portok
             int Se0/3/1
@@ -472,6 +480,8 @@
             conf t
             hostname SITE3
             license boot module c2900 technology-package securityk9
+            enable password cisco
+            service password-encryption
 
         #Portok
             int Se0/3/0
@@ -595,6 +605,14 @@
                 switchport mode access
                 switchport access vlan 6
                 exit
+            int range fa0/2-24
+                switchport mode access
+                switchport access vlan 100
+                switchport nonegotiate
+                shutdown
+                no cdp enable
+                no lldp transmit
+                no lldp receive
 
         #Vlanok
             vlan 10
@@ -707,6 +725,14 @@
                 switchport mode access
                 switchport access vlan 5
                 exit
+            int range fa0/3-24
+                switchport mode access
+                switchport access vlan 100
+                switchport nonegotiate
+                shutdown
+                no cdp enable
+                no lldp transmit
+                no lldp receive
 
         #Etherchannel
             int range fa0/22-24
@@ -728,7 +754,6 @@
             spanning-tree vlan 10,20,30,40,3,5,6
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
-
         
         #DHCP-snooping
             ip dhcp snooping
@@ -798,6 +823,14 @@
                 switchport mode access
                 switchport access vlan 40
                 exit
+            int range fa0/4-24
+                switchport mode access
+                switchport access vlan 100
+                switchport nonegotiate
+                shutdown
+                no cdp enable
+                no lldp transmit
+                no lldp receive
 
         #Etherchannel
             int range fa0/22-24
@@ -885,11 +918,18 @@
             switchport mode access
             switchport access vlan 60
             exit
+        int range fa0/17-24
+                switchport mode access
+                switchport access vlan 100
+                switchport nonegotiate
+                shutdown
+                no cdp enable
+                no lldp transmit
+                no lldp receive
 
         #STP
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
-
 
         #DHCP-snooping
             ip dhcp snooping
@@ -933,11 +973,18 @@
                 switchport mode access
                 switchport access vlan 70
                 exit
+            int range fa0/7-24, g0/2
+                switchport mode access
+                switchport access vlan 100
+                switchport nonegotiate
+                shutdown
+                no cdp enable
+                no lldp transmit
+                no lldp receive
 
         #STP
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
-
 
         #DHCP-snooping
             ip dhcp snooping
