password to switches, motd

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -113,7 +113,15 @@
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
-
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
         #Portok
             int Se0/3/0
                 ip add 40.0.0.2 255.255.255.240
@@ -259,6 +267,15 @@
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Portok
             int Se0/3/0
@@ -349,6 +366,15 @@
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Portok
             int Se0/3/0
@@ -414,6 +440,15 @@
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Portok
             int Se0/3/1
@@ -482,6 +517,15 @@
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Portok
             int Se0/3/0
@@ -585,6 +629,17 @@
         ena
             conf t
             hostname SW1x1
+            enable password cisco
+            service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #VTP
             vtp domain cisco
@@ -700,6 +755,17 @@
         ena
             conf t
             hostname SW1x2
+            enable password cisco
+            service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #VTP
             vtp mode client
@@ -799,6 +865,17 @@
         ena
             conf t
             hostname SW1x3
+            enable password cisco
+            service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #VTP
             vtp mode client
@@ -896,6 +973,17 @@
         ena
             conf t
             hostname SW2
+            enable password cisco
+            service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Vlanok
             vlan 50
@@ -959,6 +1047,17 @@
         ena
             conf t
             hostname SW3
+            enable password cisco
+            service password-encryption
+            banner motd #
+            *****************************************
+            WARNING: Unauthorized access is strictly prohibited.  
+            All activities on this system are monitored and logged.  
+            By proceeding, you acknowledge that you are an authorized user.  
+            Unauthorized access or misuse may result in civil and/or criminal penalties,  
+            in accordance with applicable laws and regulations.  
+            Your compliance is mandatory.
+            *****************************************#
 
         #Portok
             vlan 70
